# DeepDequence

./: .gitignore  ARCHITECTURE.md  GITHUB_READY_REPORT.md  MANIFEST.in  PERFORMANCE_COMPARISON.md  README.md  TEST_REPORT.md  pyproject.toml  requirements.txt  setup.py  test_tabnet.py
deepsequence_hierarchical_attention/deepsequence_hierarchical_attention/: components_lightweight.py
docs/: INTERMITTENT_HANDLER_GUIDE.md  TABNET_INTEGRATION.md  architecture_diagram.md
examples/: DeepSequence_PWL_Demo.ipynb
notebooks/: DeepFuture_Demo.ipynb  DeepSequence_Complete_Demo.ipynb
scripts/: fix_notebooks.py
src/deepfuture/: __init__.py  model.py  regressor_component.py  utils.py
src/deepsequence/: __init__.py  activations.py  config.py  model.py  seasonal_component.py  tabnet_encoder.py  utils.py
