[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsequence-pwl"
version = "1.0.0"
description = "General-purpose time series forecasting with optional intermittent handling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mritunjay Kumar", email = "mritunjay.kmr1@gmail.com"}
]
keywords = ["time-series", "forecasting", "intermittent-demand", "deep-learning", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow>=2.13.0",
    "tensorflow-lattice>=2.0.11",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/mkuma93/DeepSequence"
Documentation = "https://github.com/mkuma93/DeepSequence"
Repository = "https://github.com/mkuma93/DeepSequence"
"Bug Tracker" = "https://github.com/mkuma93/DeepSequence/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepsequence_pwl*"]
exclude = ["tests*"]
